# embedded-rust-projects-to-inspire-you

./: .gitignore  Cargo.toml  README.md
control-accelerometer/: Cargo.toml  README.md  server.py
control-accelerometer/src/: main.rs
control-accelerometer/src/constants/: mod.rs
control-dc-motor/src/: main.rs
control-servo-motor/: Cargo.toml  servo.py
control-servo-motor/src/: main.rs
control-xbox-controller/: Cargo.toml  README.md
control-xbox-controller/src/: main.rs
xbox-control-servo-dcmotor/: Cargo.toml
xbox-control-servo-dcmotor/src/: main.rs
