[package]
name = "control-accelerometer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spidev = "0.5"
gpio-cdev = "0.5"
byteorder = "1.4"
portpicker = "0.1.1"
lazy_static = "1.4.0"
chrono = "0.4.38"
csv = "1.1.6"
socket2 = "0.4"